Fix translate grid bleed mixin

--- a/src/assets/css/globals/_mixins.scss
+++ b/src/assets/css/globals/_mixins.scss
@@ -417,13 +417,13 @@
     $translateLeft: -50% - (2/12/2) * 100;
     $additionalRem: pxToRem(map-get($grid-margin-gutters, tiny)) * 1.5/6;
 
-    transform: translateX(calc(#{$translateLeft} + #{$additionalRem}));
+    transform: translateX(#{$translateLeft}) translateX(#{$additionalRem});
   }
   @include mq($from: medium, $to: large) {
     $translateLeft: -50% - (1/12/2) * 100;
     $additionalRem: pxToRem(map-get($grid-margin-gutters, medium))/12 - 0.01;
 
-    transform: translateX(calc(#{$translateLeft} + #{$additionalRem}));
+    transform: translateX(#{$translateLeft}) translateX(#{$additionalRem});
   }
 }
 
